--- a/aanbod/src/components/CourseGroup.css
+++ b/aanbod/src/components/CourseGroup.css
@@ -100,8 +100,3 @@
 		}
 	}
 }
-
-.Course.selected {
-	transform: scale(1.3);
-	z-index: 2;
-}
